--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "devDependencies": {
     "nodemon": "^1.12.1"
   },
+  "scripts": {
+    "test": "cross-env NODE_ENV=test PORT=8080 MONGO_URL=mongodb://localhost:27017/mern-test node_modules/.bin/nyc node --harmony-proxies node_modules/.bin/ava",
+  
+  },
 
    "pre-commit": {
     "lint",
