--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	},
 
 	"scripts": {
-		"test": "cross-env NODE_ENV=test PORT=8080 MONGO_URL=mongodb://localhost:27017/mern-test node_modules/.bin/nyc node --harmony-proxies node_modules/.bin/ava"
+		"test": "PORT=8080 MONGO_URL=mongodb://starz:password@ds129776.mlab.com:29776/rambo node_modules/.bin/nyc node --harmony-proxies node_modules/.bin/ava"
 
 	},
 
